--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		]
 	},
 	"dependencies": {
+		"lodash": "^4.17.5",
 		"react": "^16.0.0",
 		"react-dom": "^16.0.0",
 		"react-redux": "^5.0.7",
